# relvec-db

./: CMakeLists.txt  README.md  a.out  build.sh  run_tests.sh
chunk/: CMakeLists.txt  chunk_manager.cpp  chunk_manager.h  main.cpp
client/: CMakeLists.txt  client_config.cpp  client_config.h  client_getter.cpp  client_getter.h  main.cpp
lib/: CMakeLists.txt  serialize.cpp  serialize.h
lib/build_vectors/: CMakeCache.txt  Makefile  cmake_install.cmake
lib/build_vectors/sql/: Makefile
lib/build_vectors/test_knn/: Makefile  cmake_install.cmake
lib/build_vectors/test_vectors/: Makefile  cmake_install.cmake
lib/build_vectors/tests/: Makefile
lib/build_vectors/vectors/: Makefile  cmake_install.cmake
lib/cmake/: glob_sources.cmake  ragel.cmake
lib/sql/: CMakeLists.txt  accessors.cpp  accessors.h  aggregate_function.cpp  aggregate_function.h  ast.cpp  ast.h  ast_visitor.cpp  ast_visitor.h  btree.cpp  btree.h  btree_page.cpp  btree_page.h  bufferpool.cpp  bufferpool.h  cache.h  catalog.cpp  catalog.h  comparator.cpp  comparator.h  database.cpp  database.h  db.h  executor.cpp  executor.h  expression.cpp  expression.h  file.cpp  file.h  fixed.cpp  fixed.h  flexible.cpp  flexible.h  index.cpp  index.h  index_table.cpp  index_table.h  interpreter.cpp  interpreter.h  lexer.cpp  (+23 more)
lib/test_knn/: CMakeLists.txt  run.sh  test_knn.cpp
lib/test_vectors/: CMakeLists.txt  run.sh  test_vectors.cpp
lib/tests/: CMakeLists.txt  test_sql.cpp
lib/vectors/: CMakeLists.txt  hnsw.cpp  hnsw.h  knn_searcher.cpp  knn_searcher.h  lsh.cpp  lsh.h  vec_operations.cpp  vec_operations.h
master/: CMakeLists.txt  balancer.cpp  balancer.h  main.cpp
master/persistent_kv/: CMakeLists.txt  file_editor.cpp  file_editor.h  flexible_page.cpp  flexible_page.h  kv_storage.cpp  kv_storage.h
master/tests/: CMakeLists.txt  catch.hpp  test_persistent_kv.cpp
tests/: CMakeLists.txt  test_persistent_kv.cpp  test_serialize.cpp  test_sql.cpp
